--- a/localization/english/council_l_english.yml
+++ b/localization/english/council_l_english.yml
@@ -29,7 +29,7 @@
  COUNCILLOR_CLICK_TO_HIRE:1 "Click to appoint a [ActiveCouncilTask.GetPositionName|E]"
  COUNCILLOR_BLANK_LIEGE:0 "Your [liege|E] has no [ActiveCouncilTask.GetPositionName|E]"
  COUNCILLOR_MISSING_SPOUSE:0 "You have no [available_spouse|E]"
- COUNCILLOR_LIEGE_MISSING_SPOUSE:1 "[CouncilWindow.GetCharacter.GetFirstName] has no [available_spouse|E]"
+ COUNCILLOR_LIEGE_MISSING_SPOUSE:2 "[CouncilWindow.GetCharacter.GetShortUIName] has no [available_spouse|E]"
  COUNCILLOR_WILL_BE_ASSIGNED:0 "The [councillor|E] is about to be assigned"
  COUNCILLOR_MISSING_VIZIER: "You have no [vizier|E] or [spouse|E]"
  COUNCILLOR_LIEGE_MISSING_VIZIER: "[CouncilWindow.GetCharacter.GetShortUIName] has no [vizier|E] or [spouse|E]"
@@ -43,32 +43,51 @@
  
 ##CTP ADDED TITLES
  councillor_chancellor_ctp:0 "[ROOT.Char.Custom('CouncilPositionChancellor')]"
- councillor_chancellor_ctp_possessive:0 "[ROOT.Char.Custom('CouncilPositionChancellor')]'s"
+ #councillor_chancellor_ctp_possessive:0 "[ROOT.Char.Custom('CouncilPositionChancellor')]'s"
  councillor_steward_ctp:0 "[ROOT.Char.Custom('CouncilPositionSteward')]"
- councillor_steward_ctp_possessive:0 "[ROOT.Char.Custom('CouncilPositionSteward')]'s"
+ #councillor_steward_ctp_possessive:0 "[ROOT.Char.Custom('CouncilPositionSteward')]'s"
  councillor_marshal_ctp:0 "[ROOT.Char.Custom('CouncilPositionMarshal')]"
- councillor_marshal_ctp_possessive:0 "[ROOT.Char.Custom('CouncilPositionMarshal')]'s"
+ #councillor_marshal_ctp_possessive:0 "[ROOT.Char.Custom('CouncilPositionMarshal')]'s"
  councillor_spymaster_ctp:0 "[ROOT.Char.Custom('CouncilPositionSpymaster')]"
- councillor_spymaster_ctp_possessive:0 "[ROOT.Char.Custom('CouncilPositionSpymaster')]'s"
+ #councillor_spymaster_ctp_possessive:0 "[ROOT.Char.Custom('CouncilPositionSpymaster')]'s"
  councillor_spouse_ctp:0 "[ROOT.Char.GetTitleAsNameNoTooltip]"
- councillor_spouse_ctp_possessive:0 "[ROOT.Char.GetTitleAsNameNoTooltip]'s"
+ #councillor_spouse_ctp_possessive:0 "[ROOT.Char.GetTitleAsNameNoTooltip]'s"
 
 
  councillor_coregent:0 "Coregent"
  councillor_coregent_possessive:0 "$councillor_coregent_ctp$'s"
- councillor_chancellor:0 "Chancellor"
+ councillor_chancellor:0 "$councillor_chancellor_ctp$"
  councillor_chancellor_possessive:0 "$councillor_chancellor_ctp$'s"
- councillor_steward:0 "Steward"
+ councillor_chancellor_desc: "$game_concept_chancellor_desc$"
+ councillor_steward:0 "$councillor_steward_ctp$"
  councillor_steward_possessive:0 "$councillor_steward_ctp$'s"
- councillor_marshal:0 "Marshal"
+ councillor_steward_desc: "$game_concept_steward_desc$"
+ councillor_marshal:0 "$councillor_marshal_ctp$"
  councillor_marshal_possessive:0 "$councillor_marshal_ctp$'s"
- councillor_spymaster:0 "Spymaster"
+ councillor_marshal_desc: "$game_concept_marshal_desc$"
+ councillor_spymaster:0 "$councillor_spymaster_ctp$"
  councillor_spymaster_possessive:0 "$councillor_spymaster_ctp$'s"
+ councillor_spymaster_desc: "$game_concept_spymaster_desc$"
  councillor_court_chaplain:0 "Court Chaplain"
  councillor_court_chaplain_possessive:0 "$councillor_court_chaplain$'s"
+ councillor_court_chaplain_desc: "$game_concept_court_chaplain_desc$"
  councillor_vizier: "Confidant"
  councillor_vizier_desc: "As a [clan_government|E] Ruler you can decide to assign either your [vizier|E] or any of your [spouses|E] as your Confidant. Whoever you choose will support you in your daily tasks."
  councillor_vizier_possessive: "Confidant's"
+ councillor_kurultai: "Kurultai Member"
+ councillor_kurultai_possessive: "Kurultai Member's"
+ councillor_kurultai_1: "$councillor_kurultai$"
+ councillor_kurultai_1_possessive: "$councillor_kurultai_possessive$"
+ councillor_kurultai_1_desc: "$game_concept_kurultai_desc$"
+ councillor_kurultai_2: "$councillor_kurultai$"
+ councillor_kurultai_2_possessive: "$councillor_kurultai_possessive$"
+ councillor_kurultai_2_desc: "$game_concept_kurultai_desc$"
+ councillor_kurultai_3: "$councillor_kurultai$"
+ councillor_kurultai_3_possessive: "$councillor_kurultai_possessive$"
+ councillor_kurultai_3_desc: "$game_concept_kurultai_desc$"
+ councillor_kurultai_4: "$councillor_kurultai$"
+ councillor_kurultai_4_possessive: "$councillor_kurultai_possessive$"
+ councillor_kurultai_4_desc: "$game_concept_kurultai_desc$"
 
 #Flavor localization for Court Chaplains, sorted by Religion.
 
@@ -280,9 +299,64 @@
  councillor_court_chaplain_zunism_religion_duchy_possessive:0 "$councillor_court_chaplain_zunism_religion_duchy$'s"
  councillor_court_chaplain_zunism_religion_kingdom:0 "Grand Diviner"
  councillor_court_chaplain_zunism_religion_kingdom_possessive:0 "$councillor_court_chaplain_zunism_religion_kingdom$'s"
+ 
+ # Mandala Government
+ councillor_court_chaplain_mandala_government: "Chief Priest"
+ councillor_court_chaplain_mandala_government_possessive: "Chief Priest's"
+ councillor_court_chaplain_mandala_government_female: "Chief Priestess"
+ councillor_court_chaplain_mandala_government_female_possessive: "Chief Priestess'"
+
+# Celestial Government
+ councillor_chancellor_celestial_government_imperial: "Grand Chancellor"
+ councillor_chancellor_celestial_government_imperial_possessive: "Grand Chancellor's"
+ councillor_marshal_celestial_government_imperial: "General-in-Chief"
+ councillor_marshal_celestial_government_imperial_possessive: "General-in-Chief's"
+ councillor_steward_celestial_government_imperial: "Minister of Revenue"
+ councillor_steward_celestial_government_imperial_possessive: "Minister of Revenue's"
+ councillor_spymaster_celestial_government_imperial: "Imperial Censor"
+ councillor_spymaster_celestial_government_imperial_possessive: "Imperial Censor's"
+ councillor_court_chaplain_celestial_government_imperial: "Minister of Rites"
+ councillor_court_chaplain_celestial_government_imperial_possessive: "Minister of Rites'"
+
+ councillor_chancellor_non_celestial_government_imperial: "$councillor_chancellor_celestial_government_imperial$"
+ councillor_chancellor_non_celestial_government_imperial_possessive: "$councillor_chancellor_celestial_government_imperial_possessive$"
+ councillor_steward_non_celestial_government_imperial: "Grand Treasurer"
+ councillor_steward_non_celestial_government_imperial_possessive: "Grand Treasurer's"
+ councillor_marshal_non_celestial_government_imperial: "Grand General"
+ councillor_marshal_non_celestial_government_imperial_possessive: "Grand General's"
+ councillor_spymaster_non_celestial_government_imperial: "Grand Censor"
+ councillor_spymaster_non_celestial_government_imperial_possessive: "Grand Censor's"
+
+ councillor_chancellor_celestial_government_non_imperial: "Chief Secretary"
+ councillor_chancellor_celestial_government_non_imperial_possessive: "Chief Secretary's"
+ councillor_marshal_celestial_government_non_imperial: "Army Supervisor"
+ councillor_marshal_celestial_government_non_imperial_possessive: "Army Supervisor's"
+ councillor_steward_celestial_government_non_imperial: "Fiscal Commissioner"
+ councillor_steward_celestial_government_non_imperial_possessive: "Fiscal Commissioner's"
+ councillor_spymaster_celestial_government_non_imperial: "Investigating Censor"
+ councillor_spymaster_celestial_government_non_imperial_possessive: "Investigating Censor's"
+ councillor_court_chaplain_celestial_government_non_imperial: "Ritualist" 
+ councillor_court_chaplain_celestial_government_non_imperial_possessive: "Ritualist's"
+ councillor_court_chaplain_buddhist_chinese: "Hé Shang"
+ councillor_court_chaplain_buddhist_chinese_possessive: "Hé Shang's"
+ councillor_court_chaplain_daoist_chinese: "Taozhang"
+ councillor_court_chaplain_daoist_chinese_possessive: "Taozhang's"
+ councillor_court_chaplain_confucian_chinese: "Lisheng"
+ councillor_court_chaplain_confucian_chinese_possessive: "Lisheng's"
+ councillor_court_chaplain_buddhist_tibetan: "Banchenpo "
+ councillor_court_chaplain_buddhist_tibetan_possessive: "Banchenpo's"
+ councillor_chancellor_celestial_family_head: "Private Secretary"
+ councillor_chancellor_celestial_family_head_possessive: "Private Secretary's"
+ councillor_marshal_celestial_family_head: "Guard Captain"
+ councillor_marshal_celestial_family_head_possessive: "Guard Captain's"
+ councillor_steward_celestial_family_head: "Estate Manager"
+ councillor_steward_celestial_family_head_possessive: "Estate Manager's"
+ councillor_spymaster_celestial_family_head: "Observer"
+ councillor_spymaster_celestial_family_head_possessive: "Observer's"
 
 #Flavor localizaton for Spouse Councilor, sorted by Cultures/Governments. Should we put here links to titles? But they directly include nations so this cannot be done from here.
- councillor_spouse:0 "Spouse"
+ councillor_spouse:0 "$councillor_spouse_ctp$"
+ councillor_spouse_desc: "$game_concept_spouse_desc$"
  councillor_spouse_prince_consort:0 "Prince Consort" 
  councillor_spouse_husband:0 "Husband"
  councillor_spouse_empress:0 "[ROOT.Char.GetTitleAsNameNoTooltip]"
@@ -296,6 +370,7 @@
  councillor_spouse_duke:0 "[ROOT.Char.GetTitleAsNameNoTooltip]"
  councillor_spouse_count:0 "[ROOT.Char.GetTitleAsNameNoTooltip]"
  councillor_spouse_baron:0 "[ROOT.Char.GetTitleAsNameNoTooltip]"
+ councillor_spouse_consort: "Consort"
 
  councillor_spouse_possessive:0 "$councillor_spouse_ctp$'s"
  councillor_spouse_prince_consort_possessive:0 "$councillor_spouse_prince_consort$'s"
@@ -313,6 +388,9 @@
  councillor_spouse_baron_possessive:0 "$councillor_spouse_baron$'s"
  
  councillor_leaving_court_message_title:0 "Councillor Left Court"
- councillor_leaving_court_marriage_notification:0 "Your [council_task.GetPositionName], [councillor.GetShortUINameNoTooltip|U], left [councillor.GetHerHis] position and your court as a result of [councillor.GetHerHis] marriage to a landed spouse."
- councillor_leaving_court_landed_notification:0 "Your [council_task.GetPositionName], [councillor.GetShortUINameNoTooltip|U], left [councillor.GetHerHis] position and your court as a result of [councillor.GetHerHim] inheriting a title."
- councillor_leaving_court_generic_fallback_notification:0 "Your [council_task.GetPositionName], [councillor.GetShortUINameNoTooltip|U], has left [councillor.GetHerHis] position and your court."
+ councillor_leaving_court_marriage_notification:0 "Your [council_task.GetPositionName], [councillor.GetShortUINameNoTooltip|U], left [councillor.GetHerHis] position and your [old_employer.Custom('GetCourtConcept')] as a result of [councillor.GetHerHis] [marriage|E] to a [landed|E] spouse. #weak ([councillor.GetPrimarySpouse.GetShortUIName|U])#!"
+ councillor_leaving_court_landed_notification:0 "Your [council_task.GetPositionName], [councillor.GetShortUINameNoTooltip|U], left [councillor.GetHerHis] position and your [old_employer.Custom('GetCourtConcept')] after gaining a [title|E]. #weak ([councillor.GetPrimaryTitle.GetBaseName|V])#!"
+ councillor_leaving_court_generic_fallback_notification:0 "Your [old_employer.Custom2('RelationToMeShort', councillor)], [councillor.GetShortUINameNoTooltip|U], has left [councillor.GetHerHis] [council|E] position and your [old_employer.Custom('GetCourtConcept')]."
+
+ councillor_court_chaplain_shintoism_religion: "Court Priest"
+ councillor_court_chaplain_shintoism_religion_possessive: "Court Priest's"
